--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
             <!-- Navbar End -->
 
             <!-- Page Header Start -->
-            <div class="container py-5 px-2 bg-primary">
+            <div class="container py-5 px-2 bg-secondary">
                 <div class="row py-5 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Contact Me</h2>
