--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                     <p></p>
-                    <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                    <img class="mx-auto d-block w-75 bg-secondary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                     <h2 class="font-weight-bold">Lindsay Stolting</h2>
                         <p class="mb-3">
                             5th year PhD student studying Neuroscience and Cognitive Science at Indiana University
@@ -75,7 +75,7 @@
             <!-- Navbar End -->   
 
             <!-- Page Header Start -->
-            <div class="container py-5 px-2 bg-primary">
+            <div class="container py-5 px-2 bg-secondary">
                 <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Home</h2>
@@ -94,13 +94,13 @@
                         </div>
                         <div class="col-sm-2"></div>
                         <div class="col-md-6">
-                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="about.html">About Me</a></h3>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-secondary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="about.html">About Me</a></h3>
                             <div class="mb-2"> Education, Research Questions, Skills</div>
-                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="research.html">Publications & Software</a></h3>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-secondary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="research.html">Publications & Software</a></h3>
                             <div class="mb-2"> Papers, Code Repositories, Presentations</div>
-                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="teaching.html">Teaching & Resources</a></h3>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-secondary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="teaching.html">Teaching & Resources</a></h3>
                             <div class="mb-2"> Experience, Recommended Resources</div>
-                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-primary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="contact.html">Contact Me</a></h3>
+                            <h3 class="mt-md-3 px-md-4 mb-2 py-2 bg-secondary font-weight-bold"><a class="text-white" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" href="contact.html">Contact Me</a></h3>
                         </div>
                     </div>
                 </div>
