--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                 <p></p>
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <img class="mx-auto d-block w-75 bg-secondary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                 <h2 class="font-weight-bold">Lindsay Stolting</h2>
                     <p class="mb-3">
                         5th year PhD student studying Neuroscience and Cognitive Science at Indiana University
@@ -75,7 +75,7 @@
             <!-- Navbar End -->
 
             <!-- Page Header Start -->
-            <div class="container py-5 px-2 bg-primary">
+            <div class="container py-5 px-2 bg-secondary">
                 <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h2>
@@ -98,8 +98,8 @@
                     <div class="col-md-12">
                         <div class="mb-4"> <h3>Education</h3>
                             <ul>
-                                <li>Bachelor of Science, Neuroscience & Mathematical Biology - William & Mary - Williamsburg, VA - <b>2017-2021</b></li>
-                                <li>PhD, Neuroscience & Cognitive Science - Indiana University - Bloomington, IN - <b>2021-Present</b>
+                                <li>Bachelor of Science, Neuroscience & Mathematical Biology - William & Mary - <b>2017-2021</b></li>
+                                <li>PhD, Neuroscience & Cognitive Science - Indiana University - <b>2021-Present</b>
                                 <ul><li>Advisors: <a href="https://rdbeer.pages.iu.edu/">Dr. Randall Beer</a>, <a href="https://edizquierdo.github.io/">Dr. Eduardo Izquierdo</a></li>
                                 <li>Committee Members: Dr. Olaf Sporns, Dr. John Beggs</li></ul></li>
                             </ul>
