--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                 <p></p>
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <img class="mx-auto d-block w-75 bg-secondaryimg-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
                 <h2 class="font-weight-bold">Lindsay Stolting</h2>
                     <p class="mb-3">
                         5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
@@ -75,7 +75,7 @@
             <!-- Navbar End -->
 
             <!-- Page Header Start -->
-            <div class="container py-5 px-2 bg-primary">
+            <div class="container py-5 px-2 bg-secondary">
                 <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Teaching & Resources</h2>
