--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
         <div class="content">
             <!-- Navbar Start -->
             <div class="container p-0">
-                <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                <nav class="navbar navbar-expand-lg navbar-dark">
                     <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
             <!-- Navbar End -->
 
             <!-- Page Header Start -->
-            <div class="container py-5 px-2 bg-primary">
+            <div class="container py-5 px-2 bg-secondary">
                 <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Publications & Software</h2>
