--- a/teaching.html
+++ b/teaching.html
@@ -56,7 +56,7 @@
         <div class="content">
             <!-- Navbar Start -->
             <div class="container p-0">
-                <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                <nav class="navbar navbar-expand-lg navbar-dark">
                     <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
