--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                 <p></p>
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <img class="mx-auto d-block w-75 bg-secondary img-fluid rounded-circle p-2" src="img/profile.jpg" alt="Image">
+                <p></p>
                 <h2 class="font-weight-bold">Lindsay Stolting</h2>
                     <p class="mb-3">
                         5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
