copyright for symmetry

--- a/research.html
+++ b/research.html
@@ -253,7 +253,7 @@
                 
                 
                 <!-- Footer Start -->
-                <div class="container py-4 bg-secondary text-center">
+                <div class="container py-4 bg-dark text-center">
                     <p class="m-0 text-white">
                         &copy; Lindsay Stolting. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
                     </p>
