contact white space?

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 
             <!-- Page Header Start -->
             <div class="container py-5 px-2 bg-secondary">
-                <div class="row py-5 px-4">
+                <div class="row py-2 px-4">
                     <div class="col-sm-6 text-center text-md-left">
                         <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Contact Me</h2>
                     </div>
@@ -85,13 +85,12 @@
                         <div class="d-inline-flex pt-2">
                             <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
                             <h4 class="m-0 text-white px-2">/</h4>
-                            <h4 class="m-0 text-white">Contact Me</h4>
+                            <h4 class="m-0 text-white">Contact</h4>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Page Header End -->
-
 
             <!-- Contact Start -->
             <div class="bg-white pt-5">
@@ -102,7 +101,6 @@
                 </div>
             </div>
             <!-- Contact End -->
-
 
             <!-- Footer Start -->
             <div class="container py-4 bg-dark text-center">
