--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
             </div>
         </div>
-        <div class="content">
+        <div class="content bg-white">
             <!-- Navbar Start -->
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg navbar-dark">
