--- a/contact.html
+++ b/contact.html
@@ -54,61 +54,63 @@
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
             </div>
         </div>
-        <div class="content bg-white">
-            <!-- Navbar Start -->
-            <div class="container p-0">
-                <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav m-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="research.html" class="nav-item nav-link">Publications</a>
-                            <a href="teaching.html" class="nav-item nav-link">Teaching</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+        <div class="content">
+            <div class="bg-white">
+                <!-- Navbar Start -->
+                <div class="container p-0">
+                    <nav class="navbar navbar-expand-lg navbar-dark">
+                        <a href="" class="navbar-brand d-block d-lg-none">Pages</a>
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                            <div class="navbar-nav m-auto">
+                                <a href="index.html" class="nav-item nav-link">Home</a>
+                                <a href="about.html" class="nav-item nav-link">About</a>
+                                <a href="research.html" class="nav-item nav-link">Publications</a>
+                                <a href="teaching.html" class="nav-item nav-link">Teaching</a>
+                                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            </div>
                         </div>
-                    </div>
-                </nav>
-            </div>
-            <!-- Navbar End -->
+                    </nav>
+                </div>
+                <!-- Navbar End -->
 
-            <!-- Page Header Start -->
-            <div class="container py-5 px-2 bg-secondary">
-                <div class="row py-2 px-4">
-                    <div class="col-sm-6 text-center text-md-left">
-                        <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Contact Me</h2>
-                    </div>
-                    <div class="col-sm-6 text-center text-md-right">
-                        <div class="d-inline-flex pt-2">
-                            <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
-                            <h4 class="m-0 text-white px-2">/</h4>
-                            <h4 class="m-0 text-white">Contact</h4>
+                <!-- Page Header Start -->
+                <div class="container py-5 px-2 bg-secondary">
+                    <div class="row py-2 px-4">
+                        <div class="col-sm-6 text-center text-md-left">
+                            <h2 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Contact Me</h2>
+                        </div>
+                        <div class="col-sm-6 text-center text-md-right">
+                            <div class="d-inline-flex pt-2">
+                                <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
+                                <h4 class="m-0 text-white px-2">/</h4>
+                                <h4 class="m-0 text-white">Contact</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- Page Header End -->
+                <!-- Page Header End -->
 
-            <!-- Contact Start -->
-            <div class="bg-white pt-5">
-                <div class="p-4 text-center mb-3">
-                    <i class="far fa-2x fa-envelope mb-3 text-primary"></i>
-                    <h4 class="font-weight-bold">Email</h4>
-                    <a href="mailto:lstoltin@iu.edu">lstoltin@iu.edu</a>
+                <!-- Contact Start -->
+                <div class="bg-white pt-5">
+                    <div class="p-4 text-center mb-3">
+                        <i class="far fa-2x fa-envelope mb-3 text-primary"></i>
+                        <h4 class="font-weight-bold">Email</h4>
+                        <a href="mailto:lstoltin@iu.edu">lstoltin@iu.edu</a>
+                    </div>
                 </div>
-            </div>
-            <!-- Contact End -->
+                <!-- Contact End -->
 
-            <!-- Footer Start -->
-            <div class="container py-4 bg-dark text-center">
-                <p class="m-0 text-white">
-                    &copy; Lindsay Stolting. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
-                </p>
+                <!-- Footer Start -->
+                <div class="container py-4 bg-dark text-center">
+                    <p class="m-0 text-white">
+                        &copy; Lindsay Stolting. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                    </p>
+                </div>
+                <!-- Footer End -->
             </div>
-            <!-- Footer End -->
         </div>
     </div>
 
