--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p></p>
                     <h2 class="font-weight-bold">Lindsay Stolting</h2>
                         <p class="mb-3">
-                            5th year PhD student studying Neuroscience and Cognitive Science at Indiana University
+                            5th year PhD student studying Neuroscience and Cognitive Science at Indiana University, Bloomington
                         </p>
                         <div>
                         <span class="mb-4"><b>Research Interests:</b></span> 
