--- a/index.html
+++ b/index.html
@@ -108,12 +108,10 @@
                 <!-- Blog List End -->
                  
                 <!-- Footer Start -->
-                <div class="container py-4 text-center">
-                    <div class="bg-dark">
-                        <p class="m-0 text-white">
-                            &copy; Lindsay Stolting. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
-                        </p>
-                    </div>
+                <div class="container py-4 bg-dark text-center">
+                    <p class="m-0 text-white">
+                        &copy; Lindsay Stolting. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                    </p>
                 </div>
                 <!-- Footer End -->
             </div>
