--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <!-- Blog List End -->
                  
                 <!-- Footer Start -->
-                <div class="container py-4 bg-dark text-center">
+                <div class="container py-4 bg-tertiary text-center">
                     <p class="m-0 text-white">
                         &copy; Lindsay Stolting. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
                     </p>
